; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/axis-fifo/extr_axis-fifo.c_reset_ip_core.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/axis-fifo/extr_axis-fifo.c_reset_ip_core.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.axis_fifo = type { i64 }

@XLLF_SRR_RESET_MASK = common dso_local global i32 0, align 4
@XLLF_SRR_OFFSET = common dso_local global i64 0, align 8
@XLLF_TDFR_RESET_MASK = common dso_local global i32 0, align 4
@XLLF_TDFR_OFFSET = common dso_local global i64 0, align 8
@XLLF_RDFR_RESET_MASK = common dso_local global i32 0, align 4
@XLLF_RDFR_OFFSET = common dso_local global i64 0, align 8
@XLLF_INT_TC_MASK = common dso_local global i32 0, align 4
@XLLF_INT_RC_MASK = common dso_local global i32 0, align 4
@XLLF_INT_RPURE_MASK = common dso_local global i32 0, align 4
@XLLF_INT_RPORE_MASK = common dso_local global i32 0, align 4
@XLLF_INT_RPUE_MASK = common dso_local global i32 0, align 4
@XLLF_INT_TPOE_MASK = common dso_local global i32 0, align 4
@XLLF_INT_TSE_MASK = common dso_local global i32 0, align 4
@XLLF_IER_OFFSET = common dso_local global i64 0, align 8
@XLLF_INT_ALL_MASK = common dso_local global i32 0, align 4
@XLLF_ISR_OFFSET = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.axis_fifo*)* @reset_ip_core to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @reset_ip_core(%struct.axis_fifo* %0) #0 {
  %2 = alloca %struct.axis_fifo*, align 8
  store %struct.axis_fifo* %0, %struct.axis_fifo** %2, align 8
  %3 = load i32, i32* @XLLF_SRR_RESET_MASK, align 4
  %4 = load %struct.axis_fifo*, %struct.axis_fifo** %2, align 8
  %5 = getelementptr inbounds %struct.axis_fifo, %struct.axis_fifo* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @XLLF_SRR_OFFSET, align 8
  %8 = add nsw i64 %6, %7
  %9 = call i32 @iowrite32(i32 %3, i64 %8)
  %10 = load i32, i32* @XLLF_TDFR_RESET_MASK, align 4
  %11 = load %struct.axis_fifo*, %struct.axis_fifo** %2, align 8
  %12 = getelementptr inbounds %struct.axis_fifo, %struct.axis_fifo* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @XLLF_TDFR_OFFSET, align 8
  %15 = add nsw i64 %13, %14
  %16 = call i32 @iowrite32(i32 %10, i64 %15)
  %17 = load i32, i32* @XLLF_RDFR_RESET_MASK, align 4
  %18 = load %struct.axis_fifo*, %struct.axis_fifo** %2, align 8
  %19 = getelementptr inbounds %struct.axis_fifo, %struct.axis_fifo* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* @XLLF_RDFR_OFFSET, align 8
  %22 = add nsw i64 %20, %21
  %23 = call i32 @iowrite32(i32 %17, i64 %22)
  %24 = load i32, i32* @XLLF_INT_TC_MASK, align 4
  %25 = load i32, i32* @XLLF_INT_RC_MASK, align 4
  %26 = or i32 %24, %25
  %27 = load i32, i32* @XLLF_INT_RPURE_MASK, align 4
  %28 = or i32 %26, %27
  %29 = load i32, i32* @XLLF_INT_RPORE_MASK, align 4
  %30 = or i32 %28, %29
  %31 = load i32, i32* @XLLF_INT_RPUE_MASK, align 4
  %32 = or i32 %30, %31
  %33 = load i32, i32* @XLLF_INT_TPOE_MASK, align 4
  %34 = or i32 %32, %33
  %35 = load i32, i32* @XLLF_INT_TSE_MASK, align 4
  %36 = or i32 %34, %35
  %37 = load %struct.axis_fifo*, %struct.axis_fifo** %2, align 8
  %38 = getelementptr inbounds %struct.axis_fifo, %struct.axis_fifo* %37, i32 0, i32 0
  %39 = load i64, i64* %38, align 8
  %40 = load i64, i64* @XLLF_IER_OFFSET, align 8
  %41 = add nsw i64 %39, %40
  %42 = call i32 @iowrite32(i32 %36, i64 %41)
  %43 = load i32, i32* @XLLF_INT_ALL_MASK, align 4
  %44 = load %struct.axis_fifo*, %struct.axis_fifo** %2, align 8
  %45 = getelementptr inbounds %struct.axis_fifo, %struct.axis_fifo* %44, i32 0, i32 0
  %46 = load i64, i64* %45, align 8
  %47 = load i64, i64* @XLLF_ISR_OFFSET, align 8
  %48 = add nsw i64 %46, %47
  %49 = call i32 @iowrite32(i32 %43, i64 %48)
  ret void
}

declare dso_local i32 @iowrite32(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
